src/snapshots/purs_oxide__parser__tests__instance_3.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance (Bar a, Baz b) => Foo Int where\n              bar = 1\n        \"#))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 69,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 69,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 28,
                                                end: 33,
                                            },
                                            TypeApp(
                                                Located(
                                                    SourceSpan {
                                                        decl: Module(
                                                            ModuleId {
                                                                name: "Test",
                                                            },
                                                        ),
                                                        start: 28,
                                                        end: 31,
                                                    },
                                                    TypeConstructor(
                                                        QualifiedName {
                                                            module: None,
                                                            name: Symbol {
                                                                text: "Bar",
                                                            },
                                                        },
                                                    ),
                                                ),
                                                Located(
                                                    SourceSpan {
                                                        decl: Module(
                                                            ModuleId {
                                                                name: "Test",
                                                            },
                                                        ),
                                                        start: 32,
                                                        end: 33,
                                                    },
                                                    Var(
                                                        Symbol {
                                                            text: "a",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 35,
                                                end: 40,
                                            },
                                            TypeApp(
                                                Located(
                                                    SourceSpan {
                                                        decl: Module(
                                                            ModuleId {
                                                                name: "Test",
                                                            },
                                                        ),
                                                        start: 35,
                                                        end: 38,
                                                    },
                                                    TypeConstructor(
                                                        QualifiedName {
                                                            module: None,
                                                            name: Symbol {
                                                                text: "Baz",
                                                            },
                                                        },
                                                    ),
                                                ),
                                                Located(
                                                    SourceSpan {
                                                        decl: Module(
                                                            ModuleId {
                                                                name: "Test",
                                                            },
                                                        ),
                                                        start: 39,
                                                        end: 40,
                                                    },
                                                    Var(
                                                        Symbol {
                                                            text: "b",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 49,
                                                end: 52,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    module: None,
                                                    name: Symbol {
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 61,
                                                end: 68,
                                            },
                                            Commented(
                                                [],
                                                ValueDeclaration(
                                                    ValueDeclaration {
                                                        ident: Symbol {
                                                            text: "bar",
                                                        },
                                                        params: [],
                                                        expr: Unconditional(
                                                            Located(
                                                                SourceSpan {
                                                                    decl: Module(
                                                                        ModuleId {
                                                                            name: "Test",
                                                                        },
                                                                    ),
                                                                    start: 67,
                                                                    end: 68,
                                                                },
                                                                Literal(
                                                                    Integer(
                                                                        1,
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
