src/snapshots/purs_oxide__parser__tests__instance_chain.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance Foo Int where\n              x = 1\n            else instance Foo a where\n              x = 2\n        \"#))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 83,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 83,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 31,
                                                end: 34,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    module: None,
                                                    name: Symbol {
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 43,
                                                end: 48,
                                            },
                                            Commented(
                                                [],
                                                ValueDeclaration(
                                                    ValueDeclaration {
                                                        ident: Symbol {
                                                            text: "x",
                                                        },
                                                        params: [],
                                                        expr: Unconditional(
                                                            Located(
                                                                SourceSpan {
                                                                    decl: Module(
                                                                        ModuleId {
                                                                            name: "Test",
                                                                        },
                                                                    ),
                                                                    start: 47,
                                                                    end: 48,
                                                                },
                                                                Literal(
                                                                    Integer(
                                                                        1,
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 67,
                                                end: 68,
                                            },
                                            Var(
                                                Symbol {
                                                    text: "a",
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 77,
                                                end: 82,
                                            },
                                            Commented(
                                                [],
                                                ValueDeclaration(
                                                    ValueDeclaration {
                                                        ident: Symbol {
                                                            text: "x",
                                                        },
                                                        params: [],
                                                        expr: Unconditional(
                                                            Located(
                                                                SourceSpan {
                                                                    decl: Module(
                                                                        ModuleId {
                                                                            name: "Test",
                                                                        },
                                                                    ),
                                                                    start: 81,
                                                                    end: 82,
                                                                },
                                                                Literal(
                                                                    Integer(
                                                                        2,
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
