src/snapshots/purs_oxide__parser__tests__instance_deriving.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            derive instance Foo Int\n            derive newtype instance Foo Int\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 74,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 41,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Derive,
                                    instance_name: None,
                                    class: QualifiedName {
                                        [salsa id]: 0,
                                        module: None,
                                        name: Symbol {
                                            [salsa id]: 0,
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                start: 38,
                                                end: 41,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    [salsa id]: 1,
                                                    module: None,
                                                    name: Symbol {
                                                        [salsa id]: 1,
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                            ],
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 42,
                        end: 73,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: DeriveNewtype,
                                    instance_name: None,
                                    class: QualifiedName {
                                        [salsa id]: 0,
                                        module: None,
                                        name: Symbol {
                                            [salsa id]: 0,
                                            text: "Foo",
                                        },
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                start: 70,
                                                end: 73,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    [salsa id]: 1,
                                                    module: None,
                                                    name: Symbol {
                                                        [salsa id]: 1,
                                                        text: "Int",
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
