src/snapshots/purs_oxide__parser__tests__instance_method_sig.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            instance Foo Int where\n                x :: Int\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 54,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Test",
                },
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 54,
                    },
                    Commented(
                        [],
                        InstanceChain(
                            [
                                InstanceDeclaration {
                                    constraints: [],
                                    instance_type: Plain,
                                    instance_name: None,
                                    class: QualifiedName {
                                        symbol: Symbol {
                                            [salsa id]: 1,
                                            text: "Foo",
                                        },
                                        actually_qualified: false,
                                    },
                                    args: [
                                        Located(
                                            SourceSpan {
                                                start: 31,
                                                end: 34,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    symbol: Symbol {
                                                        [salsa id]: 2,
                                                        text: "Int",
                                                    },
                                                    actually_qualified: false,
                                                },
                                            ),
                                        ),
                                    ],
                                    body: [
                                        Located(
                                            SourceSpan {
                                                start: 45,
                                                end: 53,
                                            },
                                            Commented(
                                                [],
                                                TypeSignature(
                                                    TypeDeclarationData {
                                                        ident: Symbol {
                                                            [salsa id]: 3,
                                                            text: "x",
                                                        },
                                                        r#type: Located(
                                                            SourceSpan {
                                                                start: 50,
                                                                end: 53,
                                                            },
                                                            TypeConstructor(
                                                                QualifiedName {
                                                                    symbol: Symbol {
                                                                        [salsa id]: 2,
                                                                        text: "Int",
                                                                    },
                                                                    actually_qualified: false,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            ],
                        ),
                    ),
                ),
            ],
        },
    ),
)
